# rinha-backend-2025

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: lib.rs  main.rs
src/app/: config.rs
src/client/: connection_pool.rs  http_client.rs  mod.rs
src/config/: env.rs  mod.rs
src/handlers/: metrics.rs  mod.rs  payments.rs  payments_summary.rs
src/ipc/: message.rs  mod.rs  unix_socket.rs
src/models/: payment.rs
src/queue/: mod.rs  payment_queue.rs
src/routing/: circuit_breaker.rs  load_balancer.rs  mod.rs  predictor.rs
src/server/: handler.rs  http_parser.rs  mod.rs  response.rs
src/services/: adaptive_monitor.rs  atomic_metrics.rs  batch_processor.rs  http_client_pool.rs  intelligent_load_balancer.rs  mod.rs  multi_cache.rs  optimized_batch_processor.rs  optimized_payments.rs  payment_processor_client.rs  payment_service.rs  payments.rs  predictive_cache.rs  processor_monitor.rs  real_time_metrics.rs  smart_fallback.rs
src/storage/: arena.rs  mod.rs  payment_store.rs  ring_buffer.rs
src/utils/: atomic.rs  metrics.rs  mod.rs  money.rs
src/worker/: health_monitor.rs  mod.rs  payment_processor.rs
