[package]
name = "rinha-backend-2025"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[profile.release]
lto = "fat"                    # Link Time Optimization para máxima performance
codegen-units = 1             # Single codegen unit para otimizações cross-crate
panic = "abort"               # Binários menores e execução mais rápida
opt-level = 3                 # Otimização máxima
overflow-checks = false       # Remove verificações de runtime
debug = false                 # Sem informações de debug
strip = true                  # Remove símbolos para binário menor

[profile.bench]
inherits = "release"
debug = true

[dependencies]
# Async Runtime & Networking
tokio = { version = "1.35", features = [
    "rt-multi-thread", 
    "net", 
    "io-util", 
    "time", 
    "macros",
    "signal",
    "fs"
] }

# HTTP Server & Client
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client"] }
http-body-util = "0.1"
reqwest = { version = "0.11", features = ["json"] }

# Serialization (Ultra-fast)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"              # Binary serialization para IPC

# Concurrency & Lock-free structures
crossbeam = "0.8"            # Lock-free data structures
crossbeam-channel = "0.5"    # MPSC channels
parking_lot = "0.12"         # Faster mutexes (se precisarmos)
dashmap = "5.5"              # Concurrent HashMap

# Memory & Performance
bumpalo = "3.14"             # Arena allocator
# mimalloc = { version = "0.1", default-features = false, optional = true } # Removido temporariamente por problemas com gcc no Windows

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
url = "2.5"                  # URL parsing and validation

# Error Handling & Logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI & Config
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"                 # TOML configuration parsing

# Checksum & Hashing
crc32fast = "1.3"           # CRC32 checksums for message validation

# Async traits
async-trait = "0.1"         # For async trait definitions

# CPU detection
num_cpus = "1.16"           # CPU core count detection

# System & Unix
nix = { version = "0.27", features = ["socket"] }
libc = "0.2"

# Math & SIMD (para futuras otimizações)
bytemuck = "1.14"            # Safe transmutation
memchr = "2.6"               # SIMD string searching
rand = "0.8"                 # Random number generation
futures = "0.3"              # Future utilities

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.8"
proptest = "1.4"

[features]
default = []                 # Removido mimalloc temporariamente
# mimalloc = ["dep:mimalloc"] # Removido temporariamente
simd = []                    # Para futuras otimizações SIMD

# Benchmarks
[[bench]]
name = "end_to_end"
harness = false

[[bench]]
name = "http_parsing"
harness = false

[[bench]]
name = "payment_store"
harness = false

# Binários
[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

# Build script para otimizações específicas da CPU
[build-dependencies]
cc = "1.0"